[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/World/Non_playable_character_LASTTRY.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="AcceptDialog" type="AcceptDialog" parent="."]
visible = true
margin_left = 400.0
margin_top = 240.0
margin_right = 592.0
margin_bottom = 320.0
dialog_hide_on_ok = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
margin_left = 256.0
margin_top = 96.0
margin_right = 376.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" type="Area2D" parent="."]
position = Vector2( 256, 96 )

[node name="icon" type="Sprite" parent="Character"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character"]
shape = SubResource( 1 )
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
[connection signal="custom_action" from="AcceptDialog" to="." method="_on_AcceptDialog_custom_action"]
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="area_entered" from="Character" to="." method="_on_Character_area_entered"]
[connection signal="area_exited" from="Character" to="." method="_on_Character_area_exited"]
